setup aws onboarding
